            - Routine formsTriSolidTorus() is now called recognise(), and
              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy construction and copy assignment.
            - Added member and global swap() functions.
            - Deprecated clone().  Just use the copy constructor instead.
        Class TritmaskLen8, TritmaskLen16, TritmaskLen32, TritmaskLen64:
            - Deprecated.  Just use Tritmask1<uint8_t>, etc.
        Class TrivialTri:
            - Class constants are now constexpr.
            - Routine isTrivialTriangulation() is now called recognise(), and
              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy construction and copy assignment.
            - Added member and global swap() functions.
            - Deprecated clone().  Just use the copy constructor instead.
        Class TxIDiagonalCore, TxIParallelCore:
            - Added move/copy constructors and move/copy assignment operators.
            - Added member and global swap() functions.
        Class TypeTrie:
            - Added move/copy constructors and move/copy assignment operators.
            - Added member and global swap() functions.
            - Added short and detailed output functions.
        Class UnsolvedCase:
            - New exception class.
        Class Vector:
            - New operator !=.
            - New constructors that take iterator ranges and initialiser lists.
            - New move constructor and move assignment operator.
            - New binary +, - and scalar * operators.
            - New routine isZero().
            - New routine scaleDown() for vectors over Regina's integer classes.
            - New typedef Element.
            - Provides the standard str() and detail() output functions.
            - Added a non-const operator[]; the old setElement() is now